# stakeup

program/: Anchor.toml
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
web/: package-lock.json  package.json  tailwind.config.js
web/prisma/: schema.prisma
web/prisma/migrations/20251001200430_init/: migration.sql
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(main)/: layout.tsx
web/src/app/(main)/account/: page.tsx
web/src/app/(main)/challenge/[id]/: page.tsx
web/src/app/(main)/create/: page.tsx
web/src/app/(main)/home/: page.tsx
web/src/app/(main)/join/[invite]/: page.tsx
web/src/app/(main)/timer/[id]/: page.tsx
web/src/app/(walletprovider)/: layout.tsx
web/src/app/(walletprovider)/home/: page.tsx
web/src/app/auth/callback/: route.ts
web/src/app/connect/: page.tsx
web/src/app/home/: page.tsx
web/src/components/: ConnectWallet.tsx  FitnessChallengeCreator.tsx  StudyChallengeCreator.tsx  ThemeSwitch.tsx  WalletProvider.tsx  hero-provider.tsx  theme-switcher.tsx  timer.tsx
web/src/utils/supabase/: server.ts
